tests/ui/once-cant-call-twice-on-heap.stderr
error[E0382]: use of moved value: `blk`
  --> $DIR/once-cant-call-twice-on-heap.rs:8:5
   |
LL | fn foo<F:FnOnce()>(blk: F) {
   |                    --- move occurs because `blk` has type `F`, which does not implement the `Copy` trait
LL |     blk();
   |     ----- `blk` moved due to this call
LL |     blk();
   |     ^^^ value used here after move
   |
note: this value implements `FnOnce`, which causes it to be moved when called
  --> $DIR/once-cant-call-twice-on-heap.rs:7:5
   |
LL |     blk();
   |     ^^^
help: consider further restricting this bound
   |
LL | fn foo<F:FnOnce() + Copy>(blk: F) {
   |                   ++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
